# psquare-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  bash.exe.stackdump  pyproject.toml  server.json
.github/workflows/: publish.yml
src/parentsquare_mcp/: auth.py  client.py  config.py  download.py  export_cookies.py  models.py  server.py
src/parentsquare_mcp/parsers/: calendar.py  directory.py  feeds.py  groups.py  links.py  media.py  messages.py  notices.py  payments.py  polls.py  schools.py  students.py  volunteer.py
