[project]
name = "parentsquare-mcp"
version = "0.1.6"
description = "MCP server that gives Claude AI access to ParentSquare, the school-parent communication platform — browse feeds, calendar events, messages, directories, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "parentsquare",
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "claude",
    "school",
    "education",
    "parent-teacher",
    "school-communication",
]
authors = [{ name = "thehesiod" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Education",
]
dependencies = [
    "mcp>=1.26.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "icalendar>=6.0.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.27.0"]

[project.urls]
Homepage = "https://github.com/thehesiod/psquare-mcp"
Repository = "https://github.com/thehesiod/psquare-mcp"
"Bug Tracker" = "https://github.com/thehesiod/psquare-mcp/issues"

[project.scripts]
parentsquare-mcp = "parentsquare_mcp.server:main"
parentsquare-export-cookies = "parentsquare_mcp.export_cookies:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
